# PoperRight

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  右侧股票交易量化选股系统PRD（技术开发版）.txt
.claude/: settings.json
.claude/commands/: dev.md
.kiro/steering/: tech.md  (+3 more)
alembic/: env.py
app/: __init__.py  main.py
docs/: deployment.md  sector-data-usage.md
frontend/: index.html  package-lock.json  package.json  run-vitest-patched.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
reports/: duplicate_audit_20260502025528.json  duplicate_audit_20260502025528.md  duplicate_audit_20260502032551.json  duplicate_audit_20260502032551.md  duplicate_audit_20260502041453.json  duplicate_audit_20260502041453.md  duplicate_audit_20260502041629.json  duplicate_audit_20260502041629.md  duplicate_audit_20260502042801.json  improvement_factor_weights.md  improvement_ref_price.md  improvement_risk_rules.md  improvement_signals.md  improvement_strategies.md  improvement_summary.md  screener_evaluation.json  screener_evaluation.md
scripts/: analyze_duplicates.py  audit_duplicate_data.py  audit_kline_duplicates.py  batch_cleanup_kline.py  check_duplicates.py  cleanup_duplicate_kline.py  cleanup_sector_data.py  dev-rebuild.sh  dev-start.sh  dev-stop.sh  evaluate_screener.py  migrate_ts_symbol.py  migrate_ts_symbol_fast.py  repair_duplicate_data.py  repair_kline_duplicates.py  repair_kline_trade_date_duplicates.py  repair_tushare_timeseries_timezone.py
tests/: test_auth.py
(+745 files in other folders)
